Curso jQuery II - Aula 1: Animações: show(); hide(); toggle(); slideUp(); slideDown(); slideToggle(); fadeOut(); setTimeout(acao, tempo); stop(); offset().top; offset().left; .animate({ animacao(oes) }, tempo); .hasClass('classe'); Pseudo classes: ':visible'; Seletor.is(pseudoclasse); fadeOut(function() {acoesposteriores}).

--- a/T3/alura-typer/public/css/estilos.css
+++ b/T3/alura-typer/public/css/estilos.css
@@ -1,3 +1,7 @@
+body{
+    overflow: scroll;
+}
+
 .campo-digitacao{
     font-size: 20px;
     height: 130px;
@@ -23,4 +27,8 @@
 
 .icones {
     vertical-align: middle;
+}
+
+.placar {
+    display: none;
 }
